<resources>
    <string name="app_name">HealthAndFitness</string>
    <string name="start">Health and Fitness</string>
    <string name="btn_start">Start</string>
    <string name="diet_diseases">Diet Plan for diseases</string>
    <string name="diet_weight">Diet Plan to lose weight</string>
    <string name="exercise_weight">Exercise Plan to lose weight</string>
    <string name="exercise_pain">Exercise Plan for joint pains</string>
    <string name="title_activity_healthy_diet">Healthy Diet Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="opt_des">Description</string>
    <string name="opt_cause">Causes</string>
    <string name="opt_sym">Symptoms</string>
    <string name="opt_diet">Diet</string>
    <string name="opt_pre">Preventions</string>

    <string name="screen1">Meal Plan</string>
    <string name="Main_Screen_title">30 Days Plan to Loose Weight</string>
    <string name="Day1">Day 1</string>
    <string name="Day2">Day 2</string>
    <string name="Day3">Day 3</string>
    <string name="Day4">Day 4</string>
    <string name="Day5">Day 5</string>
    <string name="Day6">Day 6</string>
    <string name="Day7">Day 7</string>
    <string name="Day8">Day 8</string>
    <string name="Day9">Day 9</string>
    <string name="Day10">Day 10</string>
    <string name="Day11">Day 11</string>
    <string name="Day12">Day 12</string>
    <string name="Day13">Day 13</string>
    <string name="Day14">Day 14</string>
    <string name="Day15">Day 15</string>
    <string name="Day16">Day 16</string>
    <string name="Day17">Day 17</string>
    <string name="Day18">Day 18</string>
    <string name="Day19">Day 19</string>
    <string name="Day20">Day 20</string>
    <string name="Day21">Day 21</string>
    <string name="Day22">Day 22</string>
    <string name="Day23">Day 23</string>
    <string name="Day24">Day 24</string>
    <string name="Day25">Day 25</string>
    <string name="Day26">Day 26</string>
    <string name="Day27">Day 27</string>
    <string name="Day28">Day 28</string>
    <string name="Day29">Day 29</string>
    <string name="Day30">Day 30</string>
    <string name="Breakfast">Breakfast</string>
    <string name="Lunch">Lunch</string>
    <string name="Dinner">Dinner</string>

    <string name="home_screen_text">Categories</string>
    <string name="btn_shoulder_text">Shoulder</string>
    <string name="btn_knee_text">Knee</string>
    <string name="btn_back_text">Back</string>
    <string name="btn_neck_text">Neck</string>

    <string name="knee_screen_text">Knee Pain Exercises</string>
    <string name="btn_knee_legRaise">Leg Raise</string>
    <string name="btn_knee_hamstring">Hamstring Strech</string>
    <string name="btn_knee_squat">Half-Squat</string>
    <string name="btn_knee_legDip">One Leg Dip</string>
    <string name="btn_knee_legStrech">Leg Strech</string>
    <string name="btn_knee_calf">Standing Calf Strech</string>
    <string name="btn_knee_hip">Hip flexor and Quad Strech</string>
    <string name="btn_knee_roller">IT Band Foam Roller</string>
    <string name="btn_knee_figure">Figure Four Glute Strech</string>


    <string name="back_screen_text">Back Pain Exercises</string>
    <string name="btn_back_forward">Forward Bending Exercise</string>
    <string name="btn_back_bending">Back Bending Exercise</string>

    <string name="forward_screen_text">Forward Bending Exercises</string>
    <string name="btn_pelvic">Backward Pelvic Tilt</string>
    <string name="btn_single_strech">Single Knee to Chest Strech</string>
    <string name="btn_double_strech">Double Knee to Chest Strech</string>
    <string name="btn_hip_rot">Hip Rotation</string>

    <string name="backward_screen_text">Back Bending Exercises</string>
    <string name="btn_prone">Prone Positioning</string>
    <string name="btn_press">Press Ups</string>
    <string name="btn_arching">Back Arching</string>
    <string name="btn_legR">Leg Raise</string>

    <string name="neck_screen_text">Neck Pain Exercises</string>
    <string name="shoulder_screen_text">Shoulder Pain Exercises</string>
    <string name="btn_action1">Action 1</string>
    <string name="btn_action2">Action 2</string>
    <string name="btn_action3">Action 3</string>
    <string name="btn_action4">Action 4</string>
    <string name="btn_action5">Action 5</string>


</resources>
