<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WhiteSmoke">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:background="@color/ThemeColor"
            android:fontFamily="sans-serif-condensed"
            android:padding="8dp"
            android:text="@string/Main_Screen_title"
            android:textColor="@color/WhiteSmoke"
            android:textSize="25dp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_day1_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title_main"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text="@string/Day1"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_day2_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day1_main"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text="@string/Day2"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_day3_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day2_main"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text="@string/Day3"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"

            />
        <TextView
            android:id="@+id/tv_day4_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day3_main"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text="@string/Day4"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_day5_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day4_main"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text="@string/Day5"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_day6_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day5_main"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text="@string/Day6"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_day7_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day6_main"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text="@string/Day7"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_day8_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day7_main"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text="@string/Day8"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_day9_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day8_main"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text="@string/Day9"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_day10_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day9_main"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text="@string/Day10"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_day11_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day10_main"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text="@string/Day11"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_day12_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day11_main"
            android:text="@string/Day12"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_day13_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day12_main"
            android:text="@string/Day13"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_day14_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day13_main"
            android:text="@string/Day14"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_day15_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day14_main"
            android:text="@string/Day15"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_day16_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day15_main"
            android:text="@string/Day16"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_day17_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day16_main"
            android:text="@string/Day17"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_day18_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day17_main"
            android:text="@string/Day18"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_day19_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day18_main"
            android:text="@string/Day19"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_day20_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day19_main"
            android:text="@string/Day20"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_day21_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day20_main"
            android:text="@string/Day21"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_day22_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day21_main"
            android:text="@string/Day22"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"/>
        <TextView
            android:id="@+id/tv_day23_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day22_main"
            android:text="@string/Day23"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_day24_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day23_main"
            android:text="@string/Day24"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_day25_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day24_main"
            android:text="@string/Day25"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_day26_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day25_main"
            android:text="@string/Day26"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_day27_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day26_main"
            android:text="@string/Day27"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_day28_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day27_main"
            android:text="@string/Day28"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_day29_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day28_main"
            android:text="@string/Day29"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_day30_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day29_main"
            android:text="@string/Day30"
            android:background="@drawable/border_style"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            />

    </RelativeLayout>


</ScrollView>
