<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/des"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_shoulder_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/shoulder_screen_text"
        android:textSize="35dp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:padding="8dp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/ThemeColor"
        />
    <Button
        android:id="@+id/btn_act1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_style"
        android:layout_below="@id/tv_shoulder_title"
        android:text="@string/btn_action1"
        android:textSize="17sp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="italic"
        android:textColor="@color/Black"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:id="@+id/btn_act3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border_style"
        android:text="@string/btn_action3"
        android:layout_below="@id/btn_act2"
        android:textSize="17sp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="italic"
        android:textColor="@color/Black"
        android:layout_marginTop="30dp"
        />
    <Button
        android:id="@+id/btn_act4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border_style"
        android:text="@string/btn_action4"
        android:layout_below="@id/btn_act3"
        android:textSize="17sp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="italic"
        android:textColor="@color/Black"
        android:layout_marginTop="30dp"
        />
    <Button
        android:id="@+id/btn_act5"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border_style"
        android:text="@string/btn_action5"
        android:layout_below="@id/btn_act4"
        android:textSize="17sp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="italic"
        android:textColor="@color/Black"
        android:layout_marginTop="30dp"
        />
    <Button
        android:id="@+id/btn_act2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border_style"
        android:text="@string/btn_action2"
        android:layout_below="@id/btn_act1"
        android:textSize="17sp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="italic"
        android:textColor="@color/Black"
        android:layout_marginTop="30dp"
        />
</RelativeLayout>