<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/des">

   <RelativeLayout
       android:layout_height="match_parent"
       android:layout_width="match_parent"
       >
       <TextView
           android:id="@+id/tv_knee_title"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:layout_marginTop="8dp"
           android:text="@string/knee_screen_text"
           android:textSize="40sp"
           android:fontFamily="sans-serif-condensed"
           android:textStyle="bold"
           android:padding="8dp"
           android:layout_centerInParent="true"
           android:layout_alignParentTop="true"
           android:textColor="@color/ThemeColor"
           />

    <Button
        android:id="@+id/btn_knee_legRaise"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_style"
        android:text="@string/btn_knee_legRaise"
        android:layout_below="@id/tv_knee_title"
        android:textSize="17sp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="italic"
        android:layout_centerInParent="true"
        android:textColor="@color/Black"
        android:layout_marginTop="8dp"
        />
       <Button
           android:id="@+id/btn_knee_hamstring"
           android:layout_width="270dp"
           android:layout_height="match_parent"
           android:background="@drawable/border_style"
           android:text="@string/btn_knee_hamstring"
           android:layout_below="@id/btn_knee_legRaise"
           android:textSize="17sp"
           android:fontFamily="sans-serif-condensed"
           android:textStyle="italic"
           android:layout_centerInParent="true"
           android:textColor="@color/Black"
           android:layout_marginTop="8dp"
           />
       <Button
           android:id="@+id/btn_knee_legDip"
           android:layout_width="270dp"
           android:layout_height="match_parent"
           android:background="@drawable/border_style"
           android:text="@string/btn_knee_legDip"
           android:layout_below="@id/btn_knee_hamstring"
           android:textSize="17sp"
           android:fontFamily="sans-serif-condensed"
           android:textStyle="italic"
           android:layout_centerInParent="true"
           android:textColor="@color/Black"
           android:layout_marginTop="8dp"
           />
       <Button
           android:id="@+id/btn_knee_legStrech"
           android:layout_width="270dp"
           android:layout_height="match_parent"
           android:background="@drawable/border_style"
           android:text="@string/btn_knee_legStrech"
           android:layout_below="@id/btn_knee_legDip"
           android:textSize="17sp"
           android:fontFamily="sans-serif-condensed"
           android:textStyle="italic"
           android:layout_centerInParent="true"
           android:textColor="@color/Black"
           android:layout_marginTop="8dp"
           />
       <Button
           android:id="@+id/btn_knee_calf"
           android:layout_width="270dp"
           android:layout_height="match_parent"
           android:background="@drawable/border_style"
           android:text="@string/btn_knee_calf"
           android:layout_below="@id/btn_knee_legStrech"
           android:textSize="17sp"
           android:fontFamily="sans-serif-condensed"
           android:textStyle="italic"
           android:layout_centerInParent="true"
           android:padding="8dp"
           android:textColor="@color/Black"
           android:layout_marginTop="8dp"
           />
       <Button
           android:id="@+id/btn_knee_hip"
           android:layout_width="270dp"
           android:layout_height="match_parent"
           android:background="@drawable/border_style"
           android:text="@string/btn_knee_hip"
           android:layout_below="@id/btn_knee_calf"
           android:textSize="17sp"
           android:fontFamily="sans-serif-condensed"
           android:textStyle="italic"
           android:layout_centerInParent="true"
           android:textColor="@color/Black"
           android:layout_marginTop="8dp"
           />
       <Button
           android:id="@+id/btn_knee_roller"
           android:layout_width="270dp"
           android:layout_height="match_parent"
           android:background="@drawable/border_style"
           android:text="@string/btn_knee_roller"
           android:layout_below="@id/btn_knee_hip"
           android:textSize="17sp"
           android:fontFamily="sans-serif-condensed"
           android:textStyle="italic"
           android:padding="8dp"
           android:textColor="@color/Black"
           android:layout_centerInParent="true"
           android:layout_marginTop="8dp"
           />
       <Button
           android:id="@+id/btn_knee_figure"
           android:layout_width="270dp"
           android:layout_height="match_parent"
           android:background="@drawable/border_style"
           android:text="@string/btn_knee_figure"
           android:layout_below="@id/btn_knee_roller"
           android:textSize="17sp"
           android:fontFamily="sans-serif-condensed"
           android:textStyle="italic"
           android:layout_centerInParent="true"
           android:textColor="@color/Black"
           android:layout_marginTop="8dp"
           android:layout_marginBottom="8dp"
           />

   </RelativeLayout>>
</ScrollView>